# bellclone

./: .dockerignore  .gitignore  CNAME  Cargo.toml  Dockerfile  README.md  bootstrap.js  build.sh  index.html  package-client.sh  serve.sh
.github/workflows/: ci.yaml
client/: Cargo.toml  bootstrap.js  serve.sh
client/src/: enc.rs  global.rs  lib.rs  webapi_utils.rs  websocket.rs  world_manager.rs
client/src/ec/: mod.rs  user_input.rs
client/src/ec/components/: background_stars.rs  bell.rs  collision_star.rs  debug.rs  draw_numbers.rs  effects.rs  mod.rs  player.rs
client/src/ec/systems/: background_stars.rs  bell.rs  bird.rs  collision_star.rs  draw_debug.rs  draw_image.rs  draw_numbers.rs  effects.rs  mod.rs  our_player.rs  players.rs  restart.rs  tutorial_and_score.rs
client/src/render/: image_texture.rs  mod.rs  numbers.rs  shader_program.rs  view.rs
client/src/render/images/: numbers.xcf  tutorial.xcf
client/src/render/shaders/: image.frag.glsl  image.vert.glsl  postprocess.frag.glsl  postprocess.vert.glsl  simple2d.frag.glsl  simple2d.vert.glsl
client/src/render/shaders/debug/: rect.frag.glsl  rect.vert.glsl
client/src/world_manager/: mod.rs  player.rs
core/: Cargo.toml
core/src/: dec.rs  enc.rs  gen.rs  lib.rs  test_enc.rs
core/src/ec/: mod.rs
core/src/ec/components/: bell.rs  bird.rs  mod.rs  physics.rs  player.rs  transform.rs
core/src/ec/systems/: bird.rs  create_bell.rs  create_bird.rs  max_player_y.rs  mod.rs  physics.rs  player.rs
pkg/: client.d.ts  client.js  client_bg.wasm  client_bg.wasm.d.ts  package.json
protocol/: Cargo.toml  build.rs
protocol/src/: .gitignore  base.fbs  clientmsg.fbs  lib.rs  servermsg.fbs
server/: Cargo.toml
server/src/: ec.rs  enc.rs  main.rs
server/src/ec/: mod.rs
src/: client.rs
