[package]
name = "game_client"
version = "0.1.0"
authors = ["mao"]
edition = "2018"

[dependencies]
web-sys = { version = "0.3", features = ["console", "Window"] }
wasm-bindgen = { version = "0.2", features = ["default", "serde-serialize"] }
golem = { version = "0.1", features = ["web-sys"] }
game_core = { path = "../core" }

[lib]
name = "client"
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
