[package]
name = "game_client"
version = "0.1.0"
authors = ["mao"]
edition = "2018"

[dependencies]
js-sys = { version = "0.3" }
wasm-bindgen = { version = "0.2", features = ["default", "serde-serialize"] }
golem = { version = "0.1", features = ["web-sys"] }
game_core = { path = "../core" }
specs = { version = "0.17", default-features = false, features = ["wasm-bindgen"] }
image = { version = "0.23", features = ["png"], default-features = false }
glam = "0.18"
console_error_panic_hook = "0.1.6"
uuid = { version = "0.8", features = ["wasm-bindgen"] }
protocol = { path = "../protocol" }

[dependencies.web-sys]
version = "0.3"
features = ["console", "Window", "Performance", "MouseEvent", "TouchEvent", "TouchList", "Touch", "AddEventListenerOptions", "WebSocket", "MessageEvent", "BinaryType"]

[lib]
name = "client"
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
