[package]
name = "server"
version = "0.1.0"
authors = ["mao"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game_core = { path = "../core" }
glam = "0.18"
uuid = { version = "0.8", features = ["v4"] }
specs = { version = "0.17", features = ["parallel"] }
tokio-tungstenite = { version = "0.15" }
tokio = { version = "1.2", features = ["rt-multi-thread", "time", "sync", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
clap = "2.33"
futures = "0.3"
protocol = { path = "../protocol" }
